# OpenniCeshi

./: .gitignore  CMakeLists.txt
OpenniCeshi/: CMakeLists.txt  openniCeshi.cpp
Openni_load_oni_file/: CMakeLists.txt  openni_load_oni_file.cpp
Openni_load_raw_file/: CMakeLists.txt  openni_load_raw_file.cpp
